kioclient: Don't convert `:x:y` to `?line=x&column=y` for URLs starting with remote schemes.

BUG: 408632

Test Plan: `kioclient5 exec http://localhost:9000` now works correctly.

Subscribers: plasma-devel, #frameworks

Differential Revision: https://phabricator.kde.org/D22525